--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kurs1</title>
     <meta name="keywords" content="css,html, javascript">
     <meta name="description" content="Учебна страница">
-    <link rel="stylesheet" href="cssPublic/stylepublic.css">
+    <link rel="stylesheet" href="stylepublic.css">
    
 </head>
 <body>
