--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="title">
-        <h1>Zayd is my name</h1>
+        <h1>Зайцев Дмитрий, программист по различным языкам</h1>
     </div>
     
     <div class="avatar">
@@ -65,7 +65,7 @@
     </div>
     <div>
         <label for="textA">Ваше сообщение:</label><br>
-        <textarea name="textA" id="textA" cols="130" rows="5"></textarea>
+        <textarea name="textA" id="textA" cols="60" rows="5"></textarea>
     </div>
     <button type="submit">Отправить сообщение</button>
 </form>
